--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.32.2",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
