--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,6 @@
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "[typescriptreact]": {
-    "editor.defaultFormatter": "numso.prettier-standard-vscode"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
